--- a/README
+++ b/README
@@ -1,19 +1,30 @@
-# Netflix Movies and TV Show Project
+Netflix Data Analysis and Recommendation System
+Dataset
+The dataset used in this project can be found on Kaggle:
 
-## Table of Contents
-- [Description](#description)
-- [Features](#features)
-- [Installation](#installation)
-- [Usage](#usage)
-- [Contributing](#contributing)
-- [License](#license)
+https://www.kaggle.com/code/vijayjoshi17/netflix-data-analysis-cosine-recommendation
 
-## Description
-The Netflix Movies and TV Show Project is a web application that allows users to browse and discover information about movies and TV shows available on Netflix. It provides a user-friendly interface to explore the vast library of content, view details about each title, and stay updated on the latest additions.
+It contains Netflix movie and TV show data such as titles, metadata, cast information, and user ratings.
 
-## Features
-- **Search and Filter:** Easily search for movies and TV shows by title, genre, release year, and more.
-- **Detailed Information:** Get detailed information about each title, including synopsis, cast, and crew.
-- **User Ratings:** View user ratings and reviews to help make informed decisions on what to watch.
-- **Personalized Recommendations:** Receive personalized recommendations based on user preferences and viewing history.
-- **Latest Additions:** Stay up-to-date with the latest additions to the Netflix library.
+Project Overview
+This project performs analysis on the Netflix data to gain insights into the movies and shows. Some key points:
+
+Explores correlations between attributes like ratings, release year, and runtime
+Develops a content-based recommendation system using cosine similarity
+Compares movie ratings and popularity over time
+Extracts cast data to identify high-performing actors/actresses
+Technologies Used
+This analysis uses Python and the following key libraries:
+
+Pandas for data manipulation
+Matplotlib and Seaborn for visualization
+Scikit-learn for modeling/machine learning
+Usage
+The Jupyter notebooks contain the analysis code and markdown commentary explaining each step. To use:
+
+Clone this repository
+Ensure the required libraries are installed
+Navigate to and run the Jupyter notebooks
+Feel free to use and adapt the code for your own analyses!
+
+Let me know if you would like any other details included in this README. Otherwise I tried to capture high-level information about the project based on the context provided!
